src/styles/dashboard.css
:root {
  --primary-900: #0f172a;
  --primary-800: #1e293b;
  --primary-700: #334155;
  --primary-600: #475569;
  --primary-500: #64748b;
  --primary-400: #94a3b8;
  --primary-300: #cbd5e1;
  --primary-200: #e2e8f0;
  --primary-100: #f1f5f9;
  --primary-50: #f8fafc;
}

.page {
  display: flex;
}

.logo {
  padding-right: 1rem;
}

.left-sidebar-container {
  width: 18vw;
  height: 100vh;
  padding: 3.2rem 2.4rem;
  background-color: var(--primary-100);
}

.btn-left-sidebar {
  width: 100%;
  display: inline-flex;
  align-items: center;
  color: var(--primary-700);
  padding: 0.6rem 0;
  gap: 10px;
  font-size: 1.6rem;
  cursor: pointer;
}

.left-sidebar-container-content {
  margin-top: 3.2rem;
  display: flex;
  flex-direction: column;
  gap: 4.2rem;
  margin-left: -0.8rem;
}

.left-sidebar-container-content-block-list {
  list-style: none;
  margin-top: 1rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.left-sidebar-container-content-block-list li {
  padding: 0.2rem 1rem;
  border-radius: 100px;
  transition: all 0.1s ease-in;
}

.left-sidebar-container-content-block-list li:hover {
  background: var(--primary-200);
}

.left-sidebar-container-content-block-heading {
  text-transform: uppercase;
  font-size: 1.4rem;
  font-weight: 600;
  color: var(--primary-800);
  padding-left: 1rem;
}

/* Main */

.main-container {
  width: 60vw;
  background: var(--primary-50);
  height: 100vh;
  padding: 3.2rem 5.6rem;
  overflow-y: scroll;
}

.main-content-container {
  margin-top: 2.4rem;
}

.main-heading {
  font-size: 1.8rem;
  font-weight: 700;
  color: var(--primary-700);
}

.main-content-slider {
  margin-top: 1.2rem;
  display: flex;
  gap: 1.6rem;
  overflow-x: scroll;
}

.main-content-slide {
  width: 15rem;
  height: 20rem;
  background-color: var(--primary-200);
  border-radius: 8px;
  flex-shrink: 0;
}

.main-genre-slide {
  width: 24rem;
  height: 11rem;
  background-color: var(--primary-200);
  border-radius: 8px;
  flex-shrink: 0;
}

.main-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.main-profile {
  height: 4rem;
  width: 4rem;
  background: var(--primary-500);
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #fff;
  font-weight: 500;
}

.search-form {
  position: relative;
}

.search-icon {
  position: absolute;
  right: 20px;
  top: 7px;
  color: var(--primary-500);
}

.search-form input::placeholder {
  color: var(--primary-500);
}

.search-form input {
  width: 30vw;
  padding: 1rem 2rem;
  border-radius: 100px;
  border: 1.5px solid var(--primary-300);
  background: var(--primary-50);
  font-family: inherit;
  color: var(--primary-800);
  transition: border 0.2s ease-in-out;
}

.search-form input:focus {
  outline: none;
  border: 1.5px solid var(--primary-600);
}

.featured-placeholder {
  margin-top: 3.2rem;
  height: 25rem;
  border-radius: 20px;
  background-color: var(--primary-200);
}

/* Right sidebar */

.right-sidebar-container {
  width: 22vw;
  height: 100vh;
  background: var(--primary-100);
  padding: 3.2rem;
}

.right-sidebar-container-content {
  display: flex;
  flex-direction: column;
  gap: 4.2rem;
}

.right-sidebar-container-content-block-heading {
  font-size: 1.4rem;
  font-weight: 600;
}

.right-sidebar-container-content-block-list {
  margin-top: 2rem;
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
}

.right-sidebar-container-content-block-list-item {
  display: flex;
  padding: 0.6rem 1.2rem;
  margin: -0.6rem -1.2rem;
  border-radius: 8px;
  align-items: center;
  transition: all 0.1s ease-in;
  gap: 1.4rem;
  cursor: pointer;
}

.right-sidebar-container-content-block-list-item:hover {
  background: var(--primary-200);
}

.right-sidebar-movie-image {
  height: 9rem;
  width: 7rem;
  border-radius: 4px;
  background: var(--primary-300);
  flex-shrink: 0;
}

.right-sidebar-movie-content h4 {
  font-size: 1.6rem;
  font-weight: 600;
}

.right-sidebar-movie-content span {
  font-size: 1.2rem;
}

.right-sidebar-movie-icon {
  margin-top: 8px;
}

.right-sidebar-movie-icon ion-icon {
  font-size: 2rem;
  color: var(--primary-700);
}

.btn-right-sidebar {
  margin-top: 2.4rem;
  text-align: center;
  display: inline-block;
  text-decoration: none;
  background: var(--primary-300);
  color: var(--primary-800);
  width: 100%;
  padding: 1.2rem 2.4rem;
  border-radius: 100px;
  font-size: 1.4rem;
  font-weight: 500;
  transition: all 0.2s ease-in;
}

.btn-right-sidebar:hover {
  background: var(--primary-800);
  color: var(--primary-100);
}

